--- a/config/templates/index.html
+++ b/config/templates/index.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{{ url_for('static', filename='scripts/translations.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/input.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/button.js') }}"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -78,7 +79,9 @@
                       type="button"
                       id="add-word"
                       class="button"
+                      
                     >
+                    Send
                     </button>
                 </div>
             </div>
