--- a/config/templates/graf.html
+++ b/config/templates/graf.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-    <script src="config/static/scripts/go.js"></script>
-    <script src="config/static/scripts/script.js"></script>
+  <script src="{{ url_for('static', filename='scripts/go.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/graf.js') }}"></script>
     <!-- <script src="scripts/codigopila.js"></script> -->
 
 
