--- a/config/static/styles/body.css
+++ b/config/static/styles/body.css
@@ -54,14 +54,15 @@ header{
     border-radius: 5px;
 }
 
-.graf{
+.graf {
+    overflow: hidden;
     display: flex;
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    background-color: #c2d9bf7e;
-    margin-left: 10px;
-}
+    background-color: #ffffff;
+    width: 1060px;
+    height: 83.5%;
+    margin: 5px 15px 15px 15px;
+    border-radius: 10px;
+  }
 
 .pilita{
     width: 100%;
@@ -84,9 +85,9 @@ header{
 .graf-int{
     overflow: hidden;
     display: flex;
-    background-color: #020202;
+    background-color: #ffffff;
     width: 100%;
     height: 100%;
     margin: 5px 15px 15px 15px;
-    border-radius: 10px;
+    border-radius: 10px sole;
   }
