--- a/config/templates/index.html
+++ b/config/templates/index.html
@@ -11,7 +11,7 @@
     <script src="{{ url_for('static', filename='scripts/translations.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/input.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/button.js') }}"></script>
-    <script src="config/static/scripts/codigo2.js"></script>
+    <script src="{{ url_for('static', filename='scripts/codigo2.js') }}"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -42,30 +42,6 @@
     <header>
         <div class="content">
             <div class="ouput-values">
-                <div class="pila-view">
-                    <div class="pilita">
-                        
-                    </div>
-                    <div class="slider">
-                        <div class="range">
-                            <div class="sliderValue">
-                              <span>5</span>
-                            </div>
-                            <div class="field">
-                                <div class="value left">0.25</div>
-                                <input
-                                type="range"
-                                min="1"
-                                max="5"
-                                value="3"
-                                steps="1"
-                                id="inputSlider"
-                                />
-                                <div class="value right">2.0</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="graf">
                     <div class="graf-int">{% include 'graf.html' %}</div>
                 </div>
