--- a/config/static/styles/body.css
+++ b/config/static/styles/body.css
@@ -55,12 +55,12 @@ header{
 }
 
 .graf {
-    overflow: hidden;
-    display: flex;
-    background-color: #ffffff;
-    width: 1060px;
-    height: 83.5%;
-    margin: 5px 15px 15px 15px;
+    /* overflow: hidden; */
+    /* display: flex; */
+    background-color: #ffffff00;
+    width: 100%;
+    height: 99.5%;
+    margin: 0px 0px 15px 15px;
     border-radius: 10px;
   }
 
@@ -84,10 +84,10 @@ header{
 
 .graf-int{
     overflow: hidden;
-    display: flex;
+    display: block;
     background-color: #ffffff;
-    width: 100%;
-    height: 100%;
+    width: 1060px;
+    height: 83.5%;
     margin: 5px 15px 15px 15px;
     border-radius: 10px sole;
   }
