--- a/config/templates/index.html
+++ b/config/templates/index.html
@@ -72,13 +72,14 @@
                         <div id="myDiagramDiv" style="width: 600px; height: 400px;"></div>
                 </div>
             </div>
+
             <div class="input-values">
                 <div class="input-field">
                     <input type="text" id="input-word" required />
                     <label data-translate="word">Validate</label>
                 </div>
                 <div class="buttondiv">
-                    <input
+                    <button
                       onclick="opp()"
                       type="button"
                       id="add-word"
@@ -86,7 +87,7 @@
                       
                     >
                     Send
-                </input>
+                    </button>
                 </div>
             </div>
         </div>
